--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ a:hover {
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 .clearing {
