--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 /*Fonts*/
 /*Bootstrap setting*/
-.transition-all, .header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-menu-product .cart-menu-product-name h5:hover {
+.transition-all, .header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-item .cart-menu-product .cart-menu-product-name h5:hover {
   -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
@@ -46,8 +46,9 @@
 }
 
 .header-container-desktop .header-top-panel .top-panel-search .top-panel-search-form .search-form-input {
-  border: 1px solid #737373;
+  border: 3px solid #f0f0f0;
   padding-left: 15px;
+  height: 40px;
 }
 
 .header-container-desktop .header-top-panel .top-panel-search .top-panel-search-form .search-form-submit {
@@ -56,8 +57,8 @@
   right: 15px;
   background: none;
   border: none;
-  line-height: 28px;
-  color: #737373;
+  line-height: 42px;
+  color: #f0f0f0;
 }
 
 .header-container-desktop .header-top-panel .top-panel-phone {
@@ -139,11 +140,33 @@
           transform: translate(0);
 }
 
+.header-container-desktop .header-nav .cart-dropdown {
+  position: relative;
+}
+
+.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu {
+  left: -285px !important;
+  -webkit-transform: translate3d(0, 38px, 0px) !important;
+          transform: translate3d(0, 38px, 0px) !important;
+  max-height: 600px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu::-webkit-scrollbar {
+  width: 4px;
+  background-color: white;
+}
+
+.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu::-webkit-scrollbar-thumb {
+  background-color: #ffd333;
+}
+
 .header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-item {
   margin-bottom: 15px;
 }
 
-.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-menu-photo {
+.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-item .cart-menu-photo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -152,46 +175,51 @@
           align-items: center;
 }
 
-.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-menu-product .cart-menu-product-name h5 {
+.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-item .cart-menu-product .cart-menu-product-name h5 {
   font-size: 15px;
   margin-bottom: 0;
 }
 
-.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-menu-product .cart-menu-product-name h5:hover {
+.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-item .cart-menu-product .cart-menu-product-name h5:hover {
   color: #1a66ff;
 }
 
-.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-menu-product .cart-menu-product-descript {
+.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-item .cart-menu-product .cart-menu-product-descript {
   font-size: 12px;
   color: #737373;
 }
 
-.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-menu-product .cart-menu-product-price {
+.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-item .cart-menu-product .cart-menu-product-price {
   margin-top: 8px;
   font-size: 15px;
 }
 
-.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-cancel a {
+.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-item .cart-dropdown-cancel a {
   color: #737373;
 }
 
-.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-cancel a:hover {
+.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-item .cart-dropdown-cancel a:hover {
   color: #ffd333;
 }
 
-.header-container-desktop .top-panel-search-form .search-form-input, .header-container-mobile .top-panel-search-form .search-form-input {
-  border: 1px solid #737373;
-  padding-left: 15px;
+.header-container-desktop .header-nav .cart-dropdown .cart-dropdown-menu .cart-dropdown-table td {
+  padding: 2px;
 }
 
-.header-container-desktop .top-panel-search-form .search-form-submit, .header-container-mobile .top-panel-search-form .search-form-submit {
+.header-container-desktop .top-panel-search .top-panel-search-form .search-form-input, .header-container-mobile .top-panel-search .top-panel-search-form .search-form-input {
+  border: 3px solid #f0f0f0;
+  padding-left: 15px;
+  height: 40px;
+}
+
+.header-container-desktop .top-panel-search .top-panel-search-form .search-form-submit, .header-container-mobile .top-panel-search .top-panel-search-form .search-form-submit {
   position: absolute;
   width: 30px;
   right: 15px;
   background: none;
   border: none;
-  line-height: 28px;
-  color: #737373;
+  line-height: 42px;
+  color: #f0f0f0;
 }
 
 .header-container-desktop .top-panel-logo .panel-logo-wrapper, .header-container-mobile .top-panel-logo .panel-logo-wrapper {
@@ -219,7 +247,7 @@
 }
 
 .header-container-desktop .cart-btn .wishlist-circle, .header-container-desktop .wishlist-btn .wishlist-circle, .header-container-mobile .cart-btn .wishlist-circle, .header-container-mobile .wishlist-btn .wishlist-circle {
-  left: 38px;
+  left: 100px;
 }
 
 .header-container-desktop .cart-btn .cart-circle, .header-container-desktop .wishlist-btn .cart-circle, .header-container-mobile .cart-btn .cart-circle, .header-container-mobile .wishlist-btn .cart-circle {
@@ -282,5 +310,82 @@
   right: 5px;
   padding-right: 4.5px;
   padding-top: 3px;
+}
+
+@media (max-width: 1279px) {
+  #my-nav {
+    text-align: left;
+    margin: 0;
+    width: 100%;
+    position: absolute;
+    height: calc(100vh);
+    border: 1px solid #f0f0f0;
+    background-color: #00000080;
+    z-index: 10000000;
+  }
+  #my-nav .dropdown:hover {
+    background-color: #ffd333;
+  }
+  #my-nav .dropdown:hover .btn {
+    color: #3d464d;
+    font-weight: bold;
+  }
+  #my-nav .dropdown .dropdown-menu {
+    margin-top: -5px;
+    width: 100%;
+    border: 2px solid #f0f0f0;
+    text-align: left !important;
+  }
+  #my-nav .navigation-link {
+    padding-left: 20px;
+    width: 100%;
+    border: 2px solid #f0f0f0;
+    text-align: left !important;
+  }
+  .navbar-nav {
+    max-width: 300px;
+    background-color: #f0f0f0;
+    padding: 0;
+    margin: 0;
+    z-index: 100000000;
+    height: 100%;
+    overflow-y: scroll;
+  }
+  .navbar-nav::-webkit-scrollbar {
+    width: 4px;
+    background-color: white;
+  }
+  .navbar-nav::-webkit-scrollbar-thumb {
+    background-color: #ffd333;
+  }
+  .navbar-nav .navbar-nav-header {
+    border-bottom: 3px solid #3d464d !important;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+  }
+  .navbar-nav .navbar-nav-header button {
+    margin-top: 4px;
+  }
+  .navbar-nav .navbar-nav-header .nav-header-heading {
+    display: inline-block;
+    margin-top: 12px;
+  }
+  .navbar-collapse {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+  .navbar-collapse.collapsing {
+    height: auto;
+    -webkit-transition: left 0.3s ease;
+    transition: left 0.3s ease;
+    left: -100%;
+  }
+  .navbar-collapse.show {
+    left: 0;
+    -webkit-transition: left 0.3s ease-in;
+    transition: left 0.3s ease-in;
+  }
 }
 /*# sourceMappingURL=header.css.map */
