--- a/css/shared/_variables.scss
+++ b/css/shared/_variables.scss
@@ -18,14 +18,19 @@ $color-warning: orange;
 $color-success: lightgreen ;
 $color-info: lightblue;
 
+$color-rating-stars: rgb(255, 211, 51);
 
+
+$font-small: 14px;
 
 //Header
 $nav-font-weight: 700;
 $top-bar-height: 32px;
 $mobile-bar-height: 60px;
 $top-panel-height: 100px;
-$top-bar-font-size: 14px;
+
+//ProductLayout
+$product-title-size: 15px;
 
 
 
