--- a/css/header.scss
+++ b/css/header.scss
@@ -5,12 +5,12 @@
     .header-top-bar{
         background-color: $color-light-smoke;
         height: $top-bar-height;
-        font-size: $top-bar-font-size;
+        font-size: $font-small;
         .top-bar-right{
             text-align: right;
         }
         .top-bar-item{
-            line-height: $top-bar-font-size * 2;
+            line-height: $font-small * 2;
             display: inline-block;
             height: 100%;
             
@@ -48,7 +48,7 @@
                     right: 15px;
                     background: none;
                     border: none;
-                    line-height: $top-bar-font-size * 3;
+                    line-height: $font-small * 3;
                     color: $color-smoke;
                 }
             }
@@ -104,7 +104,7 @@
                         
                         .dropdown-sub-item{
                             font-weight: $nav-font-weight - 300;
-                            font-size: $top-bar-font-size;
+                            font-size: $font-small;
                             &:hover{
                                 background-color: rgba(0, 0, 0,0);
                                 color: $color-link-hover;
@@ -194,7 +194,7 @@
                 right: 15px;
                 background: none;
                 border: none;
-                line-height: $top-bar-font-size * 3;
+                line-height: $font-small * 3;
                 color: $color-smoke;
             }
         }
