--- a/css/shared/_typography.scss
+++ b/css/shared/_typography.scss
@@ -9,6 +9,21 @@ a{
         text-decoration: none;
     }
 }
+h1,h2,h3,h4,h5,h6{
+    color: $secondary;
+}
+
+.title-with-divider{
+    display: flex;
+    align-items: center;
+    .divider{
+        margin-left: 20px;
+        flex: 1;
+        height: 3px;
+        background-color: $color-smoke;
+    }
+}
+
 .btn-standard{
     background-color: $primary;
     color: $secondary !important;
