--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .title-with-divider .divider {
   margin-left: 20px;
+  margin-right: 20px;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
