--- a/css/shared/_typography.scss
+++ b/css/shared/_typography.scss
@@ -18,6 +18,7 @@ h1,h2,h3,h4,h5,h6{
     align-items: center;
     .divider{
         margin-left: 20px;
+        margin-right: 20px;
         flex: 1;
         height: 3px;
         background-color: $color-smoke;
