--- a/css/homepage.css
+++ b/css/homepage.css
@@ -109,6 +109,7 @@
 #customNav-featured-products button i {
   color: #737373;
   font-size: 25px;
+  line-height: 30px;
 }
 
 #customNav-featured-products button:hover i {
