--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -116,6 +116,7 @@
             i{
                 color: $color-dark-smoke;
                 font-size: 25px;
+                line-height: 30px;
             }
         } 
         button:hover i{
