--- a/css/productLayout.scss
+++ b/css/productLayout.scss
@@ -17,7 +17,7 @@
     }
 }
 .three-product-row{
-    height: ($product-card-height + 55px) * 2;
+    height: ($product-card-height + 65px) * 2;
     margin-top: 0;
     @include media-breakpoint-down(md) { 
         height: ($product-card-height + 50px) * 3;
@@ -92,7 +92,7 @@
             }
             .product-icon-group{
                 a{
-                    padding: 5px;
+                    padding: 2px;
                     display: inline-block;
                     &:hover{
                         background-color: $color-smoke;
@@ -108,4 +108,50 @@
         }
     }
     
+}
+
+//Big product (col-4)
+$big-product-card-height: $product-card-height * 2;
+.product-big{
+    .card{
+        height: $big-product-card-height + 65px;
+        &:hover{
+            height: $big-product-card-height + 65px;
+        }
+        .product-photo{
+            .product-photo-wrapper{
+                max-width: 100%;
+            }
+        }
+        .product-title{
+            h5{
+                margin-top: 40px;
+                font-size: $product-title-size * 1.5;
+            }
+        }
+        .price{
+            margin-top: 15px;
+            font-size: 20px;
+        }
+        .visible{
+            height: $big-product-card-height - 22px;
+        }
+        .product-hidden-bar{
+            .add-to-cart{
+                width: 200px;
+                height: 40px;
+                margin: 5px;
+                line-height: 30px;
+
+            }
+            .product-icon-group{
+                a{
+
+                    i{
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+    }
 }
